regression_tests/snap/check/testom20/testom20.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.14-3f3f047

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  5 2018 13:25:47

================================================================================
                     Run at  7-SEP-2018 09:39:23 by ccrook




================================================================================
Regression test om1 - obs modifications - invalid specification should cause er    7-SEP-2018 09:39:23

                                     ERRORS

================================================================================

Note: 7 errors reported in testom20.err
